--- a/pyFiles/mainnb.ipynb
+++ b/pyFiles/mainnb.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generar paquetes(Np y Randint)\n"
+    "Generar paquetes(Np y Randint)"
    ]
   },
   {
@@ -98,34 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.03764277 0.00026473 0.11725555 0.10140237 0.16792951 0.16496847\n",
-      " 0.07949402 0.11066589 0.15317748 0.06719921]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.03764277, 0.00026473, 0.11725555, 0.10140237, 0.16792951,\n",
-       "       0.16496847, 0.07949402, 0.11066589, 0.15317748, 0.06719921])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generateRandomWeights(_tamaño):\n",
     "    weights = np.random.random(_tamaño)\n",
     "    weights /= weights.sum()\n",
-    "    print(weights)\n",
     "    return weights"
    ]
   },
@@ -367,8 +346,7 @@
    "outputs": [],
    "source": [
     "def getDistrib(_figusTotales,_figusList):\n",
-    "    figusTotales = np.array(_figusList)\n",
-    "    figusSeries = pd.Series(figusTotales)\n",
+    "    figusTotales = pd.Series(np.array(_figusList))\n",
     "    pd.DataFrame(figusTotales).plot(kind=\"density\",\n",
     "                                      figsize=(10,10),\n",
     "                                      xlim=(-1,_figusTotales));\n",
@@ -379,6 +357,7 @@
     "        if densityX >= mayorDensidad[0]:\n",
     "            mayorDensidad[0] = densityX\n",
     "            mayorDensidad[1] = x\n",
+    "            \n",
     "    print(f\"La mayor Densidad fue: {mayorDensidad[0]} y fue en x={mayorDensidad[1]}\")\n",
     "        \n",
     "    return"
@@ -393,20 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nProb de completar con 850 paquetes: 0.36\\nProb de completar con menos de 1200 paquetes: 0.94\\nProb de completar con menos de 1150 paquetes: 0.85\\nProb de completar con menos de 900 paquetes: 0.45\\nProb de completar con menos de 950 paquetes: 0.56\\nProb de completar con menos de 1000 paquetes: 0.66\\nProb de completar con menos de 1100 paquetes: 0.86\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = np.array([850, 1150, 900, 950, 1000, 1100]).reshape((-1, 1))\n",
     "y = np.array([0.36, 0.85, 0.45, 0.56, 0.66, 0.86])\n",
@@ -490,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
