Python Notebook del TP

--- a/pyFiles/mainnb.ipynb
+++ b/pyFiles/mainnb.ipynb
@@ -201,7 +201,7 @@
     "        res.append(iteracion[0]); figusTotales += iteracion[1]\n",
     "    prom = np.mean(res) #Obtener Promedio\n",
     "    getDistrib(tamaño,figusTotales)\n",
-    "    #print(\"La mediana es: \" + str(mediana(insertionSort(res))))\n",
+    "    print(f\"La mediana es: {mediana(insertionSort(res))}\")\n",
     "    print(f\"El promedio es: {prom}\")\n",
     "    return prom"
    ]
@@ -230,10 +230,41 @@
     "    return arr\n",
     "\n",
     "def mediana(arr):\n",
-    "    i = len(arr)/2\n",
+    "    i = len(arr)//2\n",
     "    if len(arr) %2 != 1:\n",
     "        return arr[i]\n",
     "    return (arr[i- 1] + arr[i]) / 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scipy get density distribution of figus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDistrib(_figusTotales,_figusList):\n",
+    "    figusTotales = pd.Series(np.array(_figusList))\n",
+    "    pd.DataFrame(figusTotales).plot(kind=\"density\",\n",
+    "                                      figsize=(10,10),\n",
+    "                                      xlim=(-1,_figusTotales+50));\n",
+    "    \n",
+    "    mayorDensidad = [0,0]\n",
+    "    for x in range(-1, _figusTotales,1):\n",
+    "        densityX = stats.uniform.pdf(x, loc=0, scale=_figusTotales)\n",
+    "        if densityX >= mayorDensidad[0]:\n",
+    "            mayorDensidad[0] = densityX\n",
+    "            mayorDensidad[1] = x\n",
+    "            \n",
+    "    print(f\"La mayor Densidad fue: {mayorDensidad[0]} y fue en x={mayorDensidad[1]}\")\n",
+    "        \n",
+    "    return"
    ]
   },
   {
@@ -337,30 +368,6 @@
    "metadata": {},
    "source": [
     "Scipy get common distribution of figus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getDistrib(_figusTotales,_figusList):\n",
-    "    figusTotales = pd.Series(np.array(_figusList))\n",
-    "    pd.DataFrame(figusTotales).plot(kind=\"density\",\n",
-    "                                      figsize=(10,10),\n",
-    "                                      xlim=(-1,_figusTotales));\n",
-    "    \n",
-    "    mayorDensidad = [0,0]\n",
-    "    for x in range(-1, _figusTotales,1):\n",
-    "        densityX = stats.uniform.pdf(x, loc=0, scale=_figusTotales)\n",
-    "        if densityX >= mayorDensidad[0]:\n",
-    "            mayorDensidad[0] = densityX\n",
-    "            mayorDensidad[1] = x\n",
-    "            \n",
-    "    print(f\"La mayor Densidad fue: {mayorDensidad[0]} y fue en x={mayorDensidad[1]}\")\n",
-    "        \n",
-    "    return"
    ]
   },
   {
