--- a/Notebook/mainnb.ipynb
+++ b/Notebook/mainnb.ipynb
@@ -150,36 +150,32 @@
     "        repes[coleccionista] = []   \n",
     "    contPaquetes = 0\n",
     "\n",
-    "    faltantes = [set(np.arange(0,_figus_total).flatten()) for _ in range(_cantColeccionistas)]\n",
-    "    \n",
+    "   \n",
     "    while not esta_lleno(album):\n",
     "        yaProcesados=set() #Lo utilizamos para evitar operar sobre los mismos dos coleccionistas mas de una vez\n",
     "        for coleccionista in range (0,_cantColeccionistas): #Iteramos sobre todos los coleccionistas para chequear todos con todos\n",
     "            coleccionistas = np.arange(0,_cantColeccionistas)\n",
     "            coleccionistas = np.delete(coleccionistas, np.where(coleccionistas==coleccionista))\n",
     "            while(len(coleccionistas) != 0):#Logica de intercambiado de figus\n",
-    "                coleccionistaSeleccionado = coleccionistas[random.randint(0,len(coleccionistas)-1)] #Seleccionamos un coleccionista random y lo borramos de la lista\n",
-    "                coleccionistasPaired = cantorFunction(coleccionista,coleccionistaSeleccionado)\n",
+    "                coleccionistaB = coleccionistas[random.randint(0,len(coleccionistas)-1)] #Seleccionamos un coleccionista random y lo borramos de la lista\n",
+    "                coleccionistasPaired = cantorFunction(coleccionista,coleccionistaB)\n",
     "                if not coleccionistasPaired in yaProcesados:\n",
     "                    yaProcesados.add(coleccionistasPaired)\n",
-    "                    coleccionistas = np.delete(coleccionistas, np.where(coleccionistas==coleccionistaSeleccionado))\n",
-    "                    if len(repes[coleccionistaSeleccionado]) > 0 and len(repes[coleccionista]) > 0:\n",
-    "                        for figuRepeSeleccionado in repes[coleccionistaSeleccionado]: #iteramos sobre todas las repes del seleccionado\n",
-    "                            if figuRepeSeleccionado in faltantes[coleccionista]: \n",
-    "                                for figuRepeColeccionista in repes[coleccionista]: #Nos fijamos si alguna repe del coleccionista le sirve al seleccionado\n",
-    "                                    if figuRepeColeccionista in faltantes[coleccionistaSeleccionado] and figuRepeColeccionista != figuRepeSeleccionado and figuRepeSeleccionado in faltantes[coleccionista]:\n",
-    "                                        album[figuRepeSeleccionado][coleccionista] = 1; album[figuRepeColeccionista][coleccionistaSeleccionado] = 1\n",
-    "                                        repes[coleccionistaSeleccionado].remove(figuRepeSeleccionado)\n",
+    "                    coleccionistas = np.delete(coleccionistas, np.where(coleccionistas==coleccionistaB))\n",
+    "                    if len(repes[coleccionistaB]) > 0 and len(repes[coleccionista]) > 0:\n",
+    "                        for figuRepeB in repes[coleccionistaB]: #iteramos sobre todas las repes del B\n",
+    "                                for figuRepeColeccionista in repes[coleccionista]: #Nos fijamos si alguna repe del coleccionista le sirve al B\n",
+    "                                    if figuRepeColeccionista != figuRepeB:\n",
+    "                                        album[figuRepeB][coleccionista] = 1\n",
+    "                                        album[figuRepeColeccionista][coleccionistaB] = 1\n",
+    "                                        repes[coleccionistaB].remove(figuRepeB)\n",
     "                                        repes[coleccionista].remove(figuRepeColeccionista)\n",
-    "                                        faltantes[coleccionistaSeleccionado].remove(figuRepeColeccionista) #Producir el intercambio, eliminar de repes, faltantes y hacer 1 el valor en album\n",
-    "                                        faltantes[coleccionista].remove(figuRepeSeleccionado)\n",
-    "                                \n",
+    "\n",
     "        for coleccionista in range (0,_cantColeccionistas):\n",
     "            contPaquetes += 1\n",
     "            for figu in generar_paquete(_figus_total,_figusxPaquete,_figusWeights):   \n",
     "                if album[figu][coleccionista] == 0: \n",
     "                    album[figu][coleccionista] = 1\n",
-    "                    faltantes[coleccionista].remove(figu)\n",
     "                    figusAdquiridas.append(figu)\n",
     "                else:\n",
     "                    repes[coleccionista].append(figu)\n",
